# ai-video-cli

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
ai_video_cli/: commands.py  gradio.py  main.py  segment.py
